# hackathon-huggingface

./: .env  .env.example  Readme.md  pyproject.toml
workspace/app/: package-lock.json  package.json
workspace/app/app/: globals.css  layout.tsx  page.tsx
workspace/app/app/api/orchestrate/: route.ts
workspace/app/app/results/: page.tsx
workspace/app/components/: AgentPlayground.tsx  ChatInterface.tsx  PromptForm.tsx
workspace/app/contexts/: AppContext.tsx
workspace/app/data/: agents.ts
workspace/data/: startup_metrics.txt
workspace/src/: DataAnalyst.py  DevilsAdvocateAgent.py  TEST.txt  brainstorming.py  brainstorming_methods.py  data_analyst_agent.py  demo_legal_assistant.py  hf_papers_search.py  hf_research_papers.py  huggingface_search.py  legal_assistant.py  legifrance_search.py  orchestrator_agent.py  orchestrator_api.py  run_orchestrator_cli.py  simple_orchestrator.py  technical_assistant.py  test_multi_agent_collaboration.py
workspace/test/: test_hello.py
